<resources>
    <string name="app_name">ReceptoMania</string>

    <string name="login_Autorization">Авторизация</string>
    <string name="login_Registration">Регистрация</string>
    <string name="login_BtnLoginName">Имя пользователя</string>
    <string name="login_BtnPassword">Пароль</string>
    <string name="login_BtnEnter">Войти</string>
    <string name="login_BtnGuest">Войти как гость</string>

    <string name="reg_Registration">Регистрация</string>
    <string name="reg_BtnLoginName">Имя пользователя</string>
    <string name="reg_BtnPassword">Пароль</string>
    <string name="reg_BtnPasswordRepeat">Повторите пароль</string>
    <string name="reg_Confirm">Я принимаю условия</string>
    <string name="reg_UserPermis">пользовательского соглашения</string>
    <string name="reg_BtnRegistration">Зарегистрироваться</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_image">navigation image</string>

    <string name="nav_categories">Категории</string>
    <string name="nav_favorites">Избранное</string>
    <string name="nav_addRecipe">Добавить свой рецепт</string>
    <string name="nav_myRecipes">Мои рецепты</string>
    <string name="nav_search">Поиск</string>
    <string name="nav_login">Авторизация</string>
    <string name="nav_logout">Выйти</string>
    <string name="nav_profile">Профиль</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="detail_recipe_ingredients">Ингридиенты</string>
    <string name="detail_recipe_cooking">Приготовление</string>
    <string name="detail_recipe_author">Автор: </string>

    <string name="coming_soon">Coming Soon</string>

    <string name="shutdown">Закрыть приложение</string>

    <string name="chooseCategory">Выберите категорию</string>
    <string name="chooseSubCategory">Выберите подкатегорию</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="ingredient">Ингредиент</string>
    <string name="count">кол-во</string>
    <string name="add">Добавить</string>
    <string name="del">Удалить</string>
    <string name="step">Пошаговый рецепт приготовления</string>
    <string name="step1">шаг 1</string>
    <string name="justStep">шаг</string>
    <string name="addRecipe">Добавить рецепт</string>
    <string name="copyright">Шереметьев Константин</string>
    <string name="copyrightString">copyright</string>


    <string-array name="add_recipe_photo_array">
        <item>Камера</item>
        <item>Галерея</item>
    </string-array>

    <string-array name="add_recipe_mera_array">
        <item>гр.</item>
        <item>кг.</item>
        <item>мл.</item>
        <item>л.</item>
        <item>шт.</item>
        <item>ч.л.</item>
        <item>ст.л.</item>
    </string-array>
    <string-array name="category_array">
        <item></item>
    </string-array>
    <string name="add_recipe_name">Название</string>

</resources>
