<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_black_48"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_categories"
            android:checked="true"/>
        <item
            android:id="@+id/nav_addRecipe"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_addRecipe"/>
        <item
            android:id="@+id/nav_myRecipes"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_myRecipes"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/star_on"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/shutdown"
            android:icon="@drawable/baseline_power_settings_new_black_48"
            android:title="@string/shutdown" />
    </group>
    <item android:title="@string/copyrightString">
        <menu>
            <item
                android:id="@+id/copyright"
                android:gravity="bottom"
                android:checkable="false"
                android:icon="@drawable/baseline_copyright_black_48"
                android:title="@string/copyright"/>
        </menu>
    </item>
</menu>