<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_clear"
    tools:context=".AddRecipeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/imageRecipe"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_blue"/>

    <EditText
        android:id="@+id/addRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textNoSuggestions"
        android:hint="@string/add_recipe_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:text="@string/chooseCategory"
        android:textSize="20sp"
        android:fontFamily="@font/font3"
        android:textAlignment="center"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoryList">
        </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:text="@string/chooseSubCategory"
        android:textSize="20sp"
        android:fontFamily="@font/font3"
        android:textAlignment="center"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subCategoryList">
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:fontFamily="@font/font3"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:background="@drawable/notebook"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:maxLength="50"
                android:layout_height="wrap_content"
                android:tag="0ingedient"
                android:hint="@string/ingredient"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="10"
                android:tag="0count"
                android:inputType="number"
                android:hint="@string/count"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="3"
                android:tag="0mera"
                android:entries="@array/add_recipe_mera_array"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llMain"
            android:orientation="vertical">
        </LinearLayout>

        <FrameLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_buttons_style"
                    android:text="@string/add"
                    android:id="@+id/btnAddIngredient">
                </Button>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_buttons_style"
                    android:text="@string/del"
                    android:id="@+id/btnDelIngredient">
                </Button>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:text="@string/step"
                android:textSize="20sp"
                android:fontFamily="@font/font3"
                android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_style">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:tag="0step"
                    android:hint="@string/step1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llMain2"
                android:orientation="vertical">
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_buttons_style"
                        android:text="@string/add"
                        android:id="@+id/btnAddStep">
                    </Button>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_buttons_style"
                        android:text="@string/del"
                        android:id="@+id/btnDelStep">
                    </Button>
                </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_buttons_style"
            android:text="@string/addRecipe"
            android:id="@+id/btnAddRecipe"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="45sp"
        android:layout_height="80dp"/>

    </FrameLayout>
</android.support.v4.widget.NestedScrollView>