<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_clear"
    android:orientation="vertical"
    tools:context=".DetailRecipesFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detailRecipeImg"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:minHeight="120dp"
            android:layout_margin="5dp"
            android:background="@drawable/fon_for_text"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/detailRecipeFavorite"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:button="@drawable/favorite_selector"/>

            <TextView
                android:id="@+id/detailRecipeText"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="25sp"
                android:fontFamily="@font/font2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/detail_header_block">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font2"
                    android:text="@string/detail_recipe_ingredients"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/notebook"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/detailRecipeIngredientsTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detail_header_block">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/font2"
                android:text="@string/detail_recipe_cooking"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/papper2"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detailRecipeCooking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/font2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/author_grey"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/font2"
                android:text="@string/detail_recipe_author"
                android:layout_marginStart="2dp" />

            <TextView
                android:id="@+id/detailRecipeAuthor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2dp"
                android:textSize="15sp"
                android:fontFamily="@font/font2"
                android:layout_marginStart="2dp" />

        </LinearLayout>




    </LinearLayout>


</android.support.v4.widget.NestedScrollView>